Revert "Release selector fixed on iPhone"
This reverts commit b6c48c92c0fd8f4af08d1691d7daff23c922e734.

--- a/source/_static/css/style.css
+++ b/source/_static/css/style.css
@@ -187,7 +187,7 @@ dt {
 }
 
 #header-sticky {
-  z-index: 20;
+  z-index: 5;
   position: fixed;
   top: -52px;
   width: 100%;
@@ -365,7 +365,6 @@ header .menuweb-bar .menu-item a {
 }
 
 #header-default .version-zone {
-  position: relative;
 	padding: 10px 0;
 }
 
